--- a/app/views/shared/_header_banner.html.erb
+++ b/app/views/shared/_header_banner.html.erb
@@ -1,7 +1,9 @@
 <div class="main-header-banner">
     <div class="business-name">
-         <div class="logo"><i class="material-icons">whatshot</i></div>
-         <div class="title">Peak Podcasting</div>
+        <a class="non-styled-link" href="/">
+            <div class="logo"><i class="material-icons">whatshot</i></div>
+            <div class="title">Peak Podcasting</div>
+        </a>
     </div>
     <div class="link-container">
         <%= link_to "Home", root_path, class: "#{'active' if current_page? root_path}" %> 
