--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,1 +1,19 @@
-<div>Footer here</div>
+<div class="footer">
+    <div class="footer-columns">     
+        <ul>
+            <li>Schedule a conversation</li>
+            <li><a href="mailto:hello@peakpodcasting.com">hello@peakpodcasting.com</a></li>
+        </ul>
+        <ul>
+            <li>Company</li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/how-it-works">How it Works</a></li>
+        </ul>
+        <ul>
+            <li>Legal</li>
+            <li><a href="/privacy-policy">Privacy Policy</a></li>
+            <li><a href="/terms-of-use">Terms of Use</a></li>
+        </ul>
+    </div>
+    <div class="copyright-text">© 2018 Peak Podcasting, All rights reserved</div>
+</div>
