--- a/app/views/shared/_header_banner.html.erb
+++ b/app/views/shared/_header_banner.html.erb
@@ -7,6 +7,11 @@
     </div>
     <div class="link-container">
         <%= link_to "Home", root_path, class: "#{'active' if current_page? root_path}" %> 
-        <%= link_to "Sign-up", signup_path, class: "#{'active' if current_page? signup_path}" %>   
+        <% if @current_user %>
+            <%= link_to "Logout", logout_path, class: "#{'active' if current_page? logout_path}" %>   
+        <% else %>
+            <%= link_to "Sign-up", signup_path, class: "#{'active' if current_page? signup_path}" %>  
+            <%= link_to "Login", login_path, class: "#{'active' if current_page? login_path}" %>   
+        <% end %>
     </div>
 </div>
