--- a/app/views/main/login.html.erb
+++ b/app/views/main/login.html.erb
@@ -4,7 +4,7 @@
 <h2>Finalize your account to get your podcast mastered</h2>
 
 
-<div class="signup-section login-section">
+<div class="signup-section">
     <div class="signup-form">
         <%= form_tag(:action => 'login_attempt') do %>
           <%= text_field_tag(:email, '', placeholder: 'Email Address', class: 'mdl-textfield__input') %>
