remove logging line and set-up how it works component

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,7 +1,12 @@
 $main-title-color: #6A7C92;
 
 body {
+    height: 100%;
+}
+
+.blue-background {
     background-color: #F4F6F8;
+    height: 100%;
     min-width: 450px;
 }
 
@@ -296,6 +301,46 @@ body {
         font-size: 14px;
         text-align: center;
         margin-bottom: 12px;
+    }
+}
+
+.how-it-works-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    .how-it-works-col:nth-child(even) {
+        margin: 0 24px;
+    }
+
+    .how-it-works-col-title {
+        text-align: center;
+    }
+
+    i {
+        color: $main-title-color; 
+        font-size: 48px;
+    }
+
+    ul {
+        list-style-type: none;
+        min-width: 250px;
+        padding: 0 24px;
+    }
+
+    li {
+        margin-bottom: 8px;
+    }
+
+    .selectable {
+        box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.54);
+        cursor: pointer;
+    }
+
+    .selectable:hover {
+        box-shadow: 1px 1px 1px 2px rgba(0, 0, 0, 0.54);
+        background-color: #ccc;
+
     }
 }
 
