--- a/app/views/main/login.html.erb
+++ b/app/views/main/login.html.erb
@@ -1,3 +1,4 @@
+<div class="blue-background">
 <%= render "shared/header_banner" %>
 <div class="signup-container">
 <h1>Be the voice of your industry</h1>
@@ -15,4 +16,5 @@
           <div class="signup-error"><%= value %></div>
         <% end %>
     </div>
+</div>
 </div>
