--- a/app/views/main/signup.html.erb
+++ b/app/views/main/signup.html.erb
@@ -1,3 +1,4 @@
+<div class="blue-background">
 <%= render "shared/header_banner" %>
 <div class="signup-container">
 <h1>Be the voice of your industry</h1>
@@ -21,5 +22,6 @@
         <i class="material-icons">mic</i>
         <p>Peak Podcasting makes it simple to bring you podcast from the studio to your listeners ears</p>
     </div>
+</div>
 </div>
 </div>
