--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,4 @@
+<div class="blue-background">
 <%= render "shared/header_banner" %>
 
 <div class="main-content-container">
@@ -53,3 +54,4 @@
 
 
 <%= render "shared/footer" %>
+</div>
