update homepage to new mocks. add fields to user, introduce podcast and roles table. Make sign-up error messaging nicer.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -6,7 +6,7 @@ body {
 
 .blue-background {
     background-color: #F4F6F8;
-    height: 100%;
+    min-height: 100%;
     min-width: 450px;
 }
 
@@ -76,13 +76,11 @@ body {
 
     .gradient-background {
         display: block;
-
-        background: #19f7dd; /* Old browsers */
-        background: -moz-linear-gradient(left, #19f7dd 0%, #0a7494 100%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(left, #19f7dd 0%,#0a7494 100%); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to right, #19f7dd 0%,#0a7494 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#19f7dd', endColorstr='#0a7494',GradientType=1 ); /* IE6-9 */
-
+        background: #59bcb6; /* Old browsers */
+        background: -moz-linear-gradient(left, #59bcb6 0%, #4aa7c0 51%, #368fcb 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(left, #59bcb6 0%,#4aa7c0 51%,#368fcb 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to right, #59bcb6 0%,#4aa7c0 51%,#368fcb 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#59bcb6', endColorstr='#368fcb',GradientType=1 ); /* IE6-9 */
         h2 {
             color: #FFF;
         }
@@ -95,17 +93,18 @@ body {
     }
 
     .video-description-contianer {
-        display: flex;
-        flex-wrap: wrap;
+        display: flex;        
         justify-content: space-between;
+        margin-top: 8px;
 
         @media screen and (max-width: 1000px) {
+            flex-wrap: wrap;
             justify-content: center;                  
         }
 
         .description-container {
             @media screen and (min-width: 1000px) {
-                width: calc(100% - 550px)
+                width: calc(100% - 400px)
             }
         }
 
@@ -125,10 +124,12 @@ body {
                 box-shadow: 0 0 2px rgba(0,0,0,0.54);
                 color: #66CCFF;
                 display: flex;
-                font-size: 16px;
+                font-size: 18px;
                 height: 50px;
                 margin: 12px auto;
                 text-transform: none;
+                min-width: 200px;
+                justify-content: center;
             }
 
             button.get-going-button:hover {
@@ -139,20 +140,16 @@ body {
 
         .video-container {
             display: flex;
+            align-items: center;
+            margin-bottom: 70px;
 
-            .video-player {
-                align-items: center;
-                background-color: #7F7F7F;
-                display: flex;
-                justify-content: center;
-                height: 320px;
-                width: 480px;       
+            .side-panel-mic {
+                font-size: 300px;
+                color: #B4E2E7;
+                text-shadow: -1px -1px rgba(0, 0, 0, 0.54)
 
-                i {
-                    font-size: 72px;
-                    text-shadow: none;
-                }         
             }
+
         }
     }
 
@@ -178,11 +175,17 @@ body {
     h1 {
         color: rgba(0,0,0,0.87);
         font-size: 40px;
+        @media only screen and (max-device-width: 800px) {
+            font-size: 64px;
+        }
     }
 
     h2 {
         color: $main-title-color;
         font-size: 30px;
+        @media screen and (max-device-width: 800px) {
+            font-size: 48px;
+        }
     }
 
     button.create-podcast-button {
@@ -252,6 +255,7 @@ body {
             border: 1px solid rgba(255,0,0,0.54);
             margin: 4px;
             padding: 4px;
+            white-space: pre-wrap;
         }
     }
 
@@ -309,8 +313,26 @@ body {
     flex-wrap: wrap;
     justify-content: center;
 
+    .how-it-works-col {
+        align-items: center;
+        display: flex;         
+        flex-direction: column;
+        justify-content: center;
+        min-width: 250px;
+        @media screen and (max-width: 975px) {
+            min-width: 400px;
+        }
+    }
+
     .how-it-works-col:nth-child(even) {
-        margin: 0 24px;
+        margin: 0 32px;
+        padding: 0 32px;
+
+        @media screen and (min-width: 976px) {
+            border-width: 0 1px 0 1px;
+            border-style: solid;
+            border-color: rgba(0,0,0,0.24);
+        }
     }
 
     .how-it-works-col-title {
@@ -324,8 +346,8 @@ body {
 
     ul {
         list-style-type: none;
-        min-width: 250px;
-        padding: 0 24px;
+        padding: 0;
+        text-align: left;
     }
 
     li {
