--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -5,49 +5,48 @@
   <div class="section">
     <div class="hero-content">
       <h1>The easiest way to create a podcast for your business</h1>
-      <h2>A concierge for delievering high quality podcasts</h2>
+      <h2>Focus on your content</h2>
       <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored create-podcast-button">
         <div>Create Your Podcast</div>
       </button>
     </div>
   </div>
   <div class="section gradient-background">
-    <h2>A simple process from record to launch</h2>
+    <h2>Podcast Creation Simplified</h2>
     <div class="horizontal-divider"></div>
     <div class="video-description-contianer">
       <div class="video-container">
-        <div class="video-player">
-          <i class="material-icons">play_arrow</i>
-        </div>
+          <i class="material-icons side-panel-mic">mic</i>
       </div>
       <div class="description-container">
         <div class="description-text-container">
           <div class="description-section">
             <i class="material-icons">check_circle_outline</i>
-            <div><h3>Give us your audio files</h3><div>We'll need your raw audio and some information about what you want</div></div>
+            <div><h3>Give us your audio files</h3><div>Upload your raw audio, and we'll walk you through your options</div></div>
           </div>
           <div class="description-section">
             <i class="material-icons">check_circle_outline</i>
-            <div><h3>We handle everything</h3><div>After you edit a provided transcript of your podcast, we handle editing, audio mastering, all the 'ahs' and 'ums', audio quality and even distribution.</div></div>
+            <div><h3>We do the heavy lifting</h3><div>We'll take care of audio mastering, removal of all the 'ahs' and 'ums', audio quality enhancement, stiching intros and outros, and more.</div></div>
           </div>
           <div class="description-section">
             <i class="material-icons">check_circle_outline</i>
-            <div><h3>Publish your finished podcast to your audience</h3><div>Once you've approved the final version, we'll automatically host, publish, and distribute your podcast.</div></div>
+            <div><h3>We distribute the finished podcast</h3><div>Approved the final version, then we'll automatically host, publish, and distribute your podcast.</div></div>
           </div>
       </div>
       <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored get-going-button">
-           <div>Get Going</div>
-          </button>
+        <div>Get Going</div>
+      </button>
     </div>
   </div>
   </div>
   <div class="section">
     <div>
-      <h1>Be the Voice of your Industry</h1>
-      <h2>Focus on your <span class="emphasis">content</span>, not the editing and distribution</h2>
+      <h1>Our Services</h1>
+      <%= render "shared/how_it_works", selectable: false %>
       <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored create-podcast-button">
-        <div>Create Your Podcast</div>
+        <div>Get Started</div>
       </button>
+      </div>
     </div>
   </div>
 </div>
