--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,9 @@
 <div class="footer">
     <div class="footer-columns">     
         <ul>
-            <li>Schedule a conversation</li>
-            <li><a href="mailto:hello@peakpodcasting.com">hello@peakpodcasting.com</a></li>
+            <li>Contact Us</li>
+            <li><a href="mailto:hello@peakpodcasting.com">Schedule a conversation</a></li>
+            <li><a href="mailto:security@peakpodcasting.com">Security Issue</a></li>
         </ul>
         <ul>
             <li>Company</li>
