--- a/app/views/shared/_how_it_works.html.erb
+++ b/app/views/shared/_how_it_works.html.erb
@@ -29,7 +29,7 @@
             <i class="material-icons">people</i>
         </div>
         <ul>
-            <li>Host your podcast and distribute to all channels</li>
+            <li>Host and distribute your podcast</li>
             <li>Optimize podcast discoverablility</li>
             <li>Monthly updates with statistics</li>
             <li>Write shown notes</li>
