changed nav to be sticky, added editor index page

--- a/app/views/main/editor.html.erb
+++ b/app/views/main/editor.html.erb
@@ -3,15 +3,15 @@
 <div class="main-content-container">
   <div class="section">
     <div class="hero-content">
-      <h1>The easiest way to get your podacast professionally edited</h1>
-      <h5>Give us your podcast files and we'll handle the rest</h5>
-        <%= button_to "Get Started", signup_path,
+      <h1>Get consistent work that pays well</h1>
+      <h5>Focus on editing and join a community of audio editors</h5>
+        <%= button_to "Join now", signup_path,
         :class => "mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored create-podcast-button",
         :method => :get %>
     </div>
   </div>
   <div class="section gradient-background">
-    <h2>Podcast creation, simplified</h2>
+    <h2>Do what you love and get paid for it.</h2>
     <div class="horizontal-divider"></div>
     <div class="video-description-contianer">
       <div class="video-container">
@@ -23,15 +23,15 @@
         <div class="description-text-container">
           <div class="description-section">
             <i class="material-icons">check_circle_outline</i>
-            <div><h3>Give us your podcast files</h3><div>Upload your raw audio, and tell us what you need.</div></div>
+            <div><h3>Apply to be a peak podcasting editor</h3><div>We’ll review your portfolio. If you’re a match, you’ll get access to our jobs.</div></div>
           </div>
           <div class="description-section">
             <i class="material-icons">check_circle_outline</i>
-            <div><h3>We handle everything</h3><div>We’ll take care of audio mastering, removal of all the 'ahs' and 'ums’,  audio quality enhancement, stitching intros and outros and more.</div></div>
+            <div><h3>Browse client requests</h3><div>We aggregate editing jobs for you and make interfacing with clients simple.</div></div>
           </div>
           <div class="description-section">
             <i class="material-icons">check_circle_outline</i>
-            <div><h3>Publish your finished podcast to your audience</h3><div>Approve the final version, then we'll automatically host, publish and distribute your podcast.</div></div>
+            <div><h3>Get paid fairly for your work</h3><div>We can offer consistent work that pays well.</div></div>
           </div>
       </div>
     </div>
@@ -39,9 +39,8 @@
   </div>
   <div class="section">
     <div>
-      <h1>Be the Voice of your Industry</h1>
-      <h5>Focus on your <span class="emphasis">content</span>, not the editing and distribution</h5>
-        <%= button_to "Get Started", signup_path, :class => "mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored create-podcast-button", :method => :get %>
+      <h1>The easiest way to become a full time podcast editor</h1>
+        <%= button_to "Join now", signup_path, :class => "mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored create-podcast-button", :method => :get %>
       </button>
     </div>
   </div>
