--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -17,8 +17,12 @@ body {
     background-color: #28507F;
     display: flex;
     justify-content: space-between;
-    padding: 24px;
-
+    padding: 10px;
+    padding-right: 30px;
+    position: fixed;
+    width: 100%;
+    z-index: 9999;
+    top: 0;
 
     .business-name {
         align-items: center;
@@ -33,7 +37,7 @@ body {
 
     .title {
         color: #FFF;
-        font-size: 24px;
+        font-size: 18px;
     }
 
     .link-container {
@@ -62,7 +66,12 @@ body {
     }
 
     .hero-content {
-        max-width: 650px;
+        max-width: 750px;
+        padding-top: 40px;
+
+        h5 {
+            padding-bottom: 50px;
+        }
     }
 
     .emphasis {
@@ -172,31 +181,37 @@ body {
 
     h1 {
         color: rgba(0,0,0,0.87);
-        font-size: 40px;
+        font-size: 48px;
     }
 
     h2 {
         color: $main-title-color;
         font-size: 30px;
     }
+     h5 {
+        color: $main-title-color;
+    }
 
-    button.create-podcast-button {
+    .create-podcast-button {
             align-items: center;
-            background-color: #66ccFF;
+            background-color: #62B7ED;
             box-shadow: 0 0 2px rgba(0,0,0,0.54);
-            color: #FFF;
             display: flex;
             height: 50px;
             margin: auto;
     }
-    button.create-podcast-button:hover {
+    .create-podcast-button:hover {
         background-color: #51C0F5;
+    }
+    .mdl-button.mdl-button--colored{
+        color: #FFF;
     }
 }
 
 
 .signup-container {
     h1 {
+        padding-top: 50px;
         color: rgba(0,0,0,0.87);
         font-size: 40px;
         margin: 24px 0 0 0;
