--- a/app/views/shared/_header_banner.html.erb
+++ b/app/views/shared/_header_banner.html.erb
@@ -6,12 +6,12 @@
         </a>
     </div>
     <div class="link-container">
-        <%= link_to "Home", root_path, class: "#{'active' if current_page? root_path}" %> 
+        <%= link_to "For Businesses", root_path, class: "#{'active' if current_page? root_path}" %>
+        <%= link_to "For Editors", editor_path, class: "#{'active' if current_page? editor_path}" %>
         <% if @current_user %>
-            <%= link_to "Logout", logout_path, class: "#{'active' if current_page? logout_path}" %>   
+            <%= link_to "Logout", logout_path, class: "#{'active' if current_page? logout_path}" %>
         <% else %>
-            <%= link_to "Sign-up", signup_path, class: "#{'active' if current_page? signup_path}" %>  
-            <%= link_to "Login", login_path, class: "#{'active' if current_page? login_path}" %>   
+            <%= link_to "Login", login_path, class: "#{'active' if current_page? login_path}" %>
         <% end %>
     </div>
 </div>
