--- a/app/views/shared/_how_it_works.html.erb
+++ b/app/views/shared/_how_it_works.html.erb
@@ -1,5 +1,5 @@
 <div class="how-it-works-container">
-    <div class="how-it-works-col <%= selectable ? "selectable" : "" %>">
+    <div class="how-it-works-col <%= selectable ? "selectable" : "" %>" data-name="setup" data-value="setup">
         <div class="how-it-works-col-title">
             <h2>Setup</h2>
             <i class="material-icons">settings</i>
@@ -11,7 +11,7 @@
             <li>Find cover art</li>
         </ul>
     </div>
-    <div class="how-it-works-col <%= selectable ? "selectable" : "" %>">
+    <div class="how-it-works-col <%= selectable ? "selectable" : "" %>" data-name="edit" data-value="edit">
         <div class="how-it-works-col-title">
             <h2>Edit</h2>
             <i class="material-icons">edit</i>
@@ -23,7 +23,7 @@
             <li>Add supplied into and outro music</li>
         </ul>
     </div>
-    <div class="how-it-works-col <%= selectable ? "selectable" : "" %>">
+    <div class="how-it-works-col <%= selectable ? "selectable" : "" %>" data-name="distribute" data-value="distribute">
         <div class="how-it-works-col-title">
             <h2>Distribute</h2>
             <i class="material-icons">people</i>
@@ -35,4 +35,14 @@
             <li>Write shown notes</li>
         </ul>
     </div>
+    <% if selectable %>
+        <div class="how-it-works-col selectable" data-name="other" data-value="other">
+            <div class="how-it-works-col-title">
+                <h2>Other</h2>
+            </div>
+           <ul>
+                <li>We'll ask for more details later</li>
+            </ul>
+        </div>
+    <% end %>
 </div>
