--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -282,6 +282,22 @@ body {
     }
 }
 
+.information-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .information-page {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .selected {
+        background-color: rgba(0,0,0,0.24);
+    }
+}
+
 .footer {
     a {
         color: $main-title-color;
@@ -315,13 +331,15 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin: 0 24px;
 
     .how-it-works-col {
         align-items: center;
         display: flex;         
         flex-direction: column;
         justify-content: center;
-        min-width: 250px;
+        min-width: 260px;
+        min-height: 305px;
         @media screen and (max-width: 975px) {
             min-width: 400px;
         }
@@ -336,6 +354,11 @@ body {
             border-style: solid;
             border-color: rgba(0,0,0,0.24);
         }
+    }
+
+    .how-it-works-col.selectable {
+        padding: 0;
+        margin-bottom: 24px;
     }
 
     .how-it-works-col-title {
