--- a/app/views/main/editor.html.erb
+++ b/app/views/main/editor.html.erb
@@ -5,7 +5,7 @@
     <div class="hero-content">
       <h1>Get consistent work that pays well</h1>
       <h5>Focus on editing and join a community of audio editors</h5>
-        <%= button_to "Join now", signup_path,
+        <%= button_to "Join now", editor_signup_path,
         :class => "mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored create-podcast-button",
         :method => :get %>
     </div>
@@ -16,7 +16,7 @@
     <div class="video-description-contianer">
       <div class="video-container">
         <div class="video-player">
-          <i class="material-icons">play_arrow</i>
+          <i class="material-icons side-panel-mic">play_arrow</i>
         </div>
       </div>
       <div class="description-container">
@@ -40,7 +40,7 @@
   <div class="section">
     <div>
       <h1>The easiest way to become a full time podcast editor</h1>
-        <%= button_to "Join now", signup_path, :class => "mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored create-podcast-button", :method => :get %>
+        <%= button_to "Join now", editor_signup_path, :class => "mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored create-podcast-button", :method => :get %>
       </button>
     </div>
   </div>
