collect uset information flow

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,6 +3,10 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 $main-title-color: #6A7C92;
 
+.information-container {
+    margin-top: 50px;
+}
+
 .information-titles {
     text-align: center;
     h1 {
